# cclip

./: .gitignore  CMakeLists.txt  README.md  cclip.hpp  cclip.sln  generate-hpp.js  options_manager.hpp  package.json  vcpkg.json
cclip/: cclip.vcxproj  cclip.vcxproj.filters
cclip/src/: example.cpp
example/: example.vcxproj  main.cpp
includes/: option.h  options_manager.h
src/: options_manager.cpp  options_manager.h
test-src/: main.cpp
